ReservationService/Registre-service.yml
apiVersion: v1
kind: Service
metadata:
  name: Reservation-service
spec:
  ports:
  - name: http
    targetPort: 8181
    port: 80
  selector:
    app: reservation
