ReservationService/Registre-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: Reservation-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: Reservation.localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: Reservation
          servicePort: http
